2006-11-13 - standa
Some vertical font alignment tuning. Still not completely right IMHO.

2006-11-12 - standa
Implementing algorithmic FreeType font vst_effects() algorithms.
Left the 'outline' for later.

2006-07-14 - standa
FreeType antialiased rendering uses the glyph->minx too now. No weird
kerning anymore.
Glyph debugging added for debug > 3.

2006-06-05 - johan
Reversed bit order for 32 bit vr_trnfm.
Fix for debug output of return values.
Correction of colour selection for mono-expand blit in ARAnyM driver.

2006-06-02 - johan
Correction for vq_devinfo debug output.

2006-05-26 - johan
vqt_ctab now uses correct palette address and returns real colour values.
Made vrt_cpyfm disregard clip rectangle for non-screen destinations.

2006-05-19 - johan
Fixed bug in creation of extra handle table.

2006-04-26 - johan
Bug fix for bitplane driver mouse cursor removal.

2006-04-25 - johan
Made vrt_cpyfm disregard clip rectangle for non-screen destinations.
Fixed a bug that made vq_ctab sometimes use an incorrect palette address.
Made vq_ctab return the real colour values.

2006-04-19 - johan
Fixed a bug in the creation of extra handle tables.

2006-03-07 - johan
Various optimizations in the bitplane driver mouse drawing code.

2006-03-05 - johan
Made vst_arbpt() do something useful for non-vector fonts.
Made vst_font() call vst_point() for size setting.

2006-03-01 - johan
Fixed alignment for vst_charmap.
Some further optimizations for FreeType2 rendering from cached bitmaps.

2006-03-01 - standa
Made it possible to have file debug output go to a non-seekable device.

2006-02-28 - standa
vst_charmap() and vst_map_mode() implemented. Highwire maps characters
directly to UNICODE when NVDI >4.0 is available. Highwire displays
everything nicely again.
Initial spdchar.map load implemented. Will test and enable later on.
Warning! The Virtual vwk structure has changed! Recompile all the drivers!

2006-02-27 - standa